--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,11 @@
         <a href="menu.html" class="w3-bar-item w3-button w3-mobile">Menu</a>
         <a href="reservations.html" class="w3-bar-item w3-button w3-mobile">Reservations</a>
       </div>
-      <img src= "images/Haukai_Restaurant_logo.png" 
-      align = "right"
-      alt= "Logo of the Haukai Restaurant. Address: 1 Island Street Kerikeri, Bay of Islands, phone number 09 401 4019"
-      width = 319
-      height = "194">
-      <h1>Haukai Restaurant</h1>
+
     </header>
     <!-- Contact us part of the home page -->
     <main>
-      <h2 id = "identified">Contact us</h2>
+      <h2>Contact us</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52105.44242164649!2d174.04631031310217!3d-35.29131497808766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0baf52337b76c9%3A0x2a00ef6165e1e080!2sBay%20Of%20Islands!5e0!3m2!1sen!2snz!4v1672471665206!5m2!1sen!2snz"
        width="600" 
        height="450" 
