deleted w3-display-bottomleft on contact

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
        referrerpolicy="no-referrer-when-downgrade"></iframe>
 
       
-       <div class=" w3-display-bottomleft w3-xxlarge w3-half" style="font-weight: bolder;">
+       <div class="w3-xxlarge w3-half" style="font-weight: bolder;">
        <p>Contact us:</p>
        <p>Address: 1 Island Street Kerikeri, Bay of Islands</p>
       
