--- a/hours.html
+++ b/hours.html
@@ -34,7 +34,7 @@
        height="600" 
        frameborder="0" 
        scrolling="no"></iframe>
-       <div class="w3-row w3-xxlarge" style="font-weight: bolder;">
+       <div id="hours" class="w3-container w3-blue w3-row w3-xxlarge" >
         <div class="w3-half">
         <p>Mon and Tue CLOSED</p>
         <p>Wednesday 5pm - 10pm</p>
