sorted copyright element

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <!-- About us part of the home page -->
     <main>
       
-      <div id="box" class = "w3-container  w3-xxxlarge">
-      <p>ffffffffffffffffffffffffffffffffffffffffffffffffffff</p></div>
-        <div id="about" class="w3-container  w3-xxxlarge" >
+
+      <div id="about" class="w3-container w3-blue  w3-xxlarge" >
         
       <p>Haukai Restaurant specialises in <b>Māori kai</b> and is based in the Bay of Islands. It was started 
         by a couple who are keen on creating a business that would appeal to locals and tourists 
