--- a/hours.html
+++ b/hours.html
@@ -49,7 +49,7 @@
 
     </main>
     <!-- Footer for the website -->
-    <footer class="w3-display-bottomright  w3-padding-22 w3-small">
+    <footer class="w3-bottomright  w3-padding-22 w3-small">
       <p><span class="copyright">&copy; Copyright 2022 by Haukai Restaurant.</span></p>
     </footer>
   </body>
