--- a/hours.html
+++ b/hours.html
@@ -14,7 +14,7 @@
     <!-- Main header for whole website -->
     <header>
 
-      <div class="w3-bar w3-xxlarge w3-black">
+      <div class="w3-bar w3-top w3-xxlarge w3-black">
         <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
         <a href="contact.html" class="w3-bar-item w3-button w3-mobile">Contact</a>
         <a href="hours.html" class="w3-bar-item w3-button w3-mobile">Hours</a>
@@ -27,7 +27,7 @@
 
     <!-- Hours part of the home page -->
     <main>
-      <h2>Hours</h2>
+    
       <iframe src="https://calendar.google.com/calendar/embed?src=270682743c77a3678e2d7e346b3ce7ebc50c6e4499124d3283debdef065762ce%40group.calendar.google.com&ctz=Pacific%2FAuckland"
        style="border: 0" 
        width="800" 
