--- a/reservations.html
+++ b/reservations.html
@@ -14,7 +14,7 @@
     <!-- Main header for whole website -->
     <header>
 
-      <div class="w3-bar w3-xxlarge w3-black">
+      <div class="w3-bar w3-top w3-xxlarge w3-black">
         <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
         <a href="contact.html" class="w3-bar-item w3-button w3-mobile">Contact</a>
         <a href="hours.html" class="w3-bar-item w3-button w3-mobile">Hours</a>
