--- a/hours.html
+++ b/hours.html
@@ -10,6 +10,15 @@
         <title>Hours</title>
         
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PTPRVLZQN0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PTPRVLZQN0');
+</script>
     <body>
     <!-- Main header for whole website -->
     <header>
