--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <title>Home page</title>
         
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PTPRVLZQN0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PTPRVLZQN0');
+</script>
     <body>
     <!-- Main header for whole website -->
     <header>
